UserCrudApplication/k8s/user-crud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-crud-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-crud
  template:
    metadata:
      labels:
        app: user-crud
    spec:
      containers:
        - name: user-crud
          image: alariclightin/user-crud:1.0
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
          readinessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
