UserCrudApplication/k8s/mongo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
  selector:
    app: mongo

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:5.0.9-focal
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: mongodb
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: standard
        resources:
          requests:
            storage: 500Mi
