UserCrudApplication/k8s/user-crud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-crud-service
spec:
  selector:
    app: user-crud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
